fix(maida): kamae desc nowrap + remove padding-right/max-width constraint

--- a/src/views/KamaeView.css
+++ b/src/views/KamaeView.css
@@ -69,11 +69,10 @@
     color: var(--t-dim);
     opacity: 0.7;
     margin-top: 0.125rem;
-    max-width: 300px;
-    padding-right: 3rem;
     line-height: 1.4;
     margin-left: auto;
     text-align: right;
+    white-space: nowrap;
 }
 
 @media (max-height: 800px) {
